# gxy-wes-bioblend

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: deploy.yaml  tox.yml
docs/: Makefile  cli.rst  conf.py  developing.md  index.rst  installation.md  make.bat  requirements.txt  usage.md
gxy_wes_bioblend/: __init__.py  cli.py  client.py
gxy_wes_bioblend/examples/: __init__.py  simple.gxwf.yml
tests/: test_client.py
